# rust_raw_server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20260425201016_create_users_table.sql  20260426021809_add_auth_fields_to_users.sql  20260427201747_create_refresh_tokens.sql
scripts/: backup-db.sh  docker-entrypoint.sh  restore-db.sh
src/: app.rs  config.rs  lib.rs  main.rs  state.rs  telemetry.rs
src/auth/: extractor.rs  jwt.rs  mod.rs
src/http/: mod.rs  request.rs  response.rs
src/models/: auth.rs  user.rs
src/repositories/: mod.rs  refresh_tokens_repository.rs  users_repository.rs
src/responses/: api_response.rs
src/router/: router.rs
src/routes/: auth.rs  health.rs  home.rs  mod.rs  users.rs
src/server/: mod.rs  server.rs  tcp.rs  thread_pool.rs
src/services/: auth_service.rs  mod.rs  users_service.rs
tests/: api.rs
