[package]
name = "rust_raw_server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
dotenvy = "0.15"
axum = "0.8.9"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
chrono = { version = "0.4.44", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
tower_governor = "0.8.0"

[dev-dependencies]
http-body-util = "0.1.3"
reqwest = { version = "0.13.2", features = ["json"] }
serial_test = "3.4.0"
tokio = { version = "1.52.1", features = ["macros"] }
tower = { version = "0.5.3", features = ["util"] }
